# startup-manager

./: .gitignore  Phase2_终极开发文档.md  READE  index.html  package-lock.json  package.json  优化.txt  功能优化p01.docx  需求.txt
.github/workflows/: build-windows.yml
admin-web/: index.html  package-lock.json  package.json  vite.config.ts
admin-web/src/: App.css  App.tsx
backup_v1.0/: client-package.json  tauri.conf.json
backup_v1.0/admin-web-src/: App.css  App.tsx
backup_v1.0/client-src/: i18n.ts  mockData.ts
docs/: 任务精灵_手机版开发文档.md
icon/: 未命名.sketch  未命名3.sketch
logo/: 未命名4.sketch
server/: data.db-shm  data.db-wal  package-lock.json  package.json
src/: App.css  App.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
startup-manager/: index.html  package-lock.json  package.json
startup-manager/src-tauri/: Cargo.toml  tauri.conf.json
startup-manager/src-tauri/binaries/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml-rpc.0.dylib  libggml.0.dylib  libllama.0.dylib  libmtmd.0.dylib  url.txt
startup-manager/src-tauri/capabilities/: default.json
startup-manager/src-tauri/icons/: icon.icns
startup-manager/src-tauri/rdev-local/src/macos/: keyboard.rs
startup-manager/src-tauri/scripts/: download-engine-win.ps1
startup-manager/src-tauri/src/: accessibility.rs  ai_engine.rs  lib.rs  local_model.rs  main.rs  marketplace.rs  openclaw.rs  recorder.rs  ws_server.rs
task-wizard-mobile/: README.md  pubspec.yaml
架构原理文件/: AI助手完整架构图.md  implementation_plan.md  walkthrough.md  完整优化方案.md
(+805 files in other folders)
