[package]
name = "startup-manager"
version = "0.2.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "startup_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
rdev = { path = "./rdev-local" }
enigo = { version = "0.2", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
